src/objects/loan__J1_Segment__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>loan__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>J1 Segments</relationshipLabel>
        <relationshipName>J1_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Base_Segment_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Segment Definition</label>
        <referenceTo>loan__Base_Segment_Definition__c</referenceTo>
        <relationshipLabel>J1 Segments</relationshipLabel>
        <relationshipName>J1_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Consumber_Information_Indicator__c</fullName>
        <label>Consumer Information Indicator</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Consumer_Transaction_Type__c</fullName>
        <label>Consumer Transaction Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__ECOA_Code__c</fullName>
        <label>ECOA Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Generation_Code__c</fullName>
        <label>Generation Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Reserved__c</fullName>
        <label>Reserved</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Segment_Identifier__c</fullName>
        <label>Segment Identifier</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Surname__c</fullName>
        <label>Surname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Telephone_Number__c</fullName>
        <label>Telephone Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>J1 Segment</label>
    <nameField>
        <displayFormat>J1-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>J1 Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>